# SatSwarm

./: .gitmodules  Cargo.toml  ProjectProposal.md  README.md  eval.sh  extensions.md  ideas.md  node_tb.v  plots.ipynb  results.md  test.csv  test.py
evaluation/: commands.txt  compare_with_minisat.py  plot_performance.py  plot_topology_comparison.py  plot_torus_comparison.py
hardware/: find_max_freq.sh  node.v  node_tb.v  run_synthesis.sh  run_test.sh  synthesize_node.ys
logs/: 2025-06-05@14:24.csv  DummySat-Torus(1, 1)-1-1-1.csv  big-Torus(1, 1)-1-1000000.csv  eval_set-Dense(64)-64-1-1000000.csv  eval_set-Grid(8, 8)-1000000.csv  eval_set-Torus(18, 18)-324-1-1000000.csv  eval_set-Torus(2, 2)-4-100-20.csv  eval_set-Torus(2, 2)-8-1-1000000.csv  generated_unsat-Grid(10, 10)-1000000.csv  random-Grid(1, 1)-1-1000000.csv  random-Grid(10, 10)-100-1-1000000.csv  random-Grid(10, 10)-100-10-1000000.csv  random-Grid(10, 10)-1000000.csv  random-Torus(1, 1)-1-1000000.csv  sat-Torus(2, 2)-4-100-150.csv  sat-Torus(2, 2)-4-100-175.csv  sat-Torus(2, 2)-4-100-20.csv  sat-Torus(2, 2)-4-100-50.csv  satlib-Dense(64)-64-100-20.csv  satlib-Grid(8, 8)-64-100-20.csv  satlib-Grid(8, 8)-64-100-50.csv  satlib-Torus(16, 16)-256-100-20.csv  satlib-Torus(16, 16)-256-100-50.csv  satlib-Torus(2, 2)-4-100-20.csv  satlib-Torus(2, 2)-4-100-50.csv  satlib-Torus(32, 32)-1024-100-20.csv  satlib-Torus(32, 32)-1024-100-50.csv  satlib-Torus(4, 4)-16-100-20.csv  satlib-Torus(4, 4)-16-100-50.csv  satlib-Torus(8, 8)-64-100-20.csv  satlib-Torus(8, 8)-64-100-50.csv  selected-Torus(2, 2)-4-100-20.csv  selected-Torus(8, 8)-64-100-20.csv  selected-Torus(8, 8)-64-100-20_795827.csv  selected-Torus(8, 8)-64-100-20_795835.csv  tests-Grid(10, 10)-1000000.csv  tests-Torus(1, 1)-1-1000000.csv  tests-Torus(10, 10)-100-1000000.csv  tests-Torus(2, 2)-4-100-20.csv  unsat-Grid(1, 1)-1-1000000.csv  (+6 more)
logs_minisat/: minisat_results.csv  minisat_results_old.csv
minisat_eval/: minisat_eval.py  minisat_tester.py  unsat_gen.py
notes/: related_work.md
src/: main.rs
(+108 files in other folders)
