[package]
name = "satswarm"
version = "0.1.0"
edition = "2021"
authors = ["SatSwarm Developer"]
description = "Architectural simulation of a grid of DPLL SAT solver modules"

[dependencies]
tokio = { version = "1.36", features = ["full"] }  # Async runtime
serde = { version = "1.0", features = ["derive"] } # Serialization
serde_json = "1.0"                                 # JSON support
log = "0.4"                                        # Logging
env_logger = "0.11"                                # Logging implementation
thiserror = "1.0"                                  # Error handling
clap = { version = "4.5", features = ["derive"] }  # Command line argument parsing
rand = "0.8"                                       # Random number generation
dashmap = "5.5"                                    # Thread-safe hashmap
crossbeam = "0.8"                                  # Concurrent data structures
rayon = "1.8"                                      # Parallel iterators
bitvec = "1.0"                                     # Efficient bit vectors
parking_lot = "0.12"                               # Fast synchronization primitives
petgraph = "0.6"                                   # Graph data structure library
