[package]
name = "sat_swarm"
version = "0.1.0"
edition = "2021"
authors = ["SatSwarm Developer"]
description = "Architectural simulation of a grid of DPLL SAT solver modules"

[dependencies]
csv = "1.3.1"
rand = "0.9.0"
rustsat = "0.7.0"
rustsat-minisat = "0.7.0"
hashbrown = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
bincode = "2.0.1"
